# yank

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  angular.json  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
.claude/: .mcp.json  settings.json
.claude/skills/create-release/: SKILL.md
.claude/skills/implement-planned-feature/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: release.yml
docs/: backlog.md
docs/superpowers/plans/: 2026-04-23-i18n.md  2026-04-23-search-filter-pin.md  2026-04-23-spartan-ng-integration.md  2026-04-23-theme-selection.md  2026-04-27-component-extraction.md  2026-04-27-custom-snippets.md  2026-04-27-inline-edit-before-paste.md  2026-04-27-local-fonts.md  2026-04-27-settings-autosave.md  2026-04-27-settings-extension.md  2026-04-27-settings-grouping.md  2026-04-27-source-app-tracking.md  2026-04-27-text-transformations.md  2026-04-27-window-drag-position.md  2026-04-27-yank-rename.md  2026-04-28-ctrl-modifier-for-pin-edit.md  2026-04-28-entry-hover-tooltip.md  2026-04-28-ocr-from-images.md  2026-04-28-quick-paste-shortcut-index.md  2026-04-28-quick-paste-shortcuts.md  2026-04-29-capture-exclusion-rules.md  2026-04-29-clipboard-list-refactor.md  2026-04-29-pause-capture-mode.md  2026-04-29-snippet-drag-drop.md  2026-04-29-snippet-folders.md  2026-04-30-clipboard-selection.md  2026-04-30-keyboard-command-resolvers.md  2026-04-30-regex-search.md  2026-04-30-snippet-mutation-design.md  2026-04-30-tauri-event-bus.md  2026-05-07-merge-entries.md  2026-05-13-app-icon.md  2026-05-13-more-transforms.md  2026-05-18-settings-layout-redesign.md  2026-05-19-github-releases-deployment.md  2026-05-28-auto-paste.md
docs/superpowers/specs/: 2026-04-23-i18n-design.md  2026-04-23-search-filter-pin-design.md  2026-04-23-spartan-ng-design.md  2026-04-23-theme-selection-design.md  2026-04-27-capture-exclusion-rules-design.md  2026-04-27-component-extraction-design.md  2026-04-27-configurable-merge-separator-design.md  2026-04-27-custom-snippets-design.md  2026-04-27-inline-edit-before-paste-design.md  2026-04-27-local-fonts-design.md  2026-04-27-multi-select-merge-paste-design.md  2026-04-27-ocr-from-images-design.md  2026-04-27-quick-paste-shortcuts-design.md  2026-04-27-settings-autosave-design.md  2026-04-27-settings-extension-design.md  2026-04-27-settings-grouping-design.md  2026-04-27-source-app-tracking-design.md  2026-04-27-text-transformations-design.md  2026-04-27-window-drag-position-design.md  (+18 more)
scripts/: generate-paused-icon.mjs  pre-push  update-server.ts
src/: index.html  styles.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  models.rs  ocr.rs  shortcuts.rs  windows.rs
src-tauri/src/platform/: mod.rs
src-tauri/src/platform/windows/: clipboard_monitor.rs
src-tauri/src/store/: mod.rs  sqlite_store.rs
src/app/: app.config.ts  app.routes.ts  app.spec.ts  app.ts
(+97 files in other folders)
