[package]
name = "yank"
version = "0.1.0"
description = "YANK — Yet Another Nifty Keeper. Your clipboard history, kept."
authors = []
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "yank_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Clipboard
arboard = { version = "3", features = ["image-data"] }

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Hashing for dedup
sha2 = "0.10"
hex = "0.4"

# Image processing for thumbnails
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

# Async / channels
tokio = { version = "1", features = ["sync", "rt-multi-thread", "macros"] }

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Base64 for thumbnail transport to frontend
base64 = "0.22"

# Windows-specific
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_System_LibraryLoader",
  "Win32_UI_WindowsAndMessaging",
  "Win32_System_DataExchange",
  "Win32_Graphics_Gdi",
  "Win32_System_Threading",
  "Win32_System_ProcessStatus",
  "Globalization",
  "Graphics_Imaging",
  "Media_Ocr",
  "Storage_Streams",
] }
